--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "ejs": "^3.1.9",
     "express": "^4.19.1",
     "json-web-token": "^3.2.0",
+    "mongoose": "^8.3.1",
     "node-fetch": "^3.3.2",
     "node-localstorage": "^3.0.5",
     "nodemon": "^3.1.0"
@@ -16,5 +17,6 @@
   },
   "author": "",
   "license": "ISC",
+  "devDependencies": {},
   "description": ""
 }
