--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.js",
+    "dev": "nodemon index.js",
+    "lint": "eslint.",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
